MDEV-33545: Add innodb_data_file_write_through=NO_FSYNC

In commit 24648768b443f6adeb8a0f4302958bfb300d536f (MDEV-30136)
the parameter innodb_flush_method was deprecated, with no direct
replacement for innodb_flush_method=O_DIRECT_NO_FSYNC.

Let us change innodb_data_file_write_through from Boolean to ENUM,
with a third value NO_FSYNC that innodb_flush_method=O_DIRECT_NO_FSYNC
will be mapped to. This value will prevent InnoDB from making any durable
writes to data files, which is what would normally be done right before
the log checkpoint LSN is updated. Depending on the file system and its
configuration, this may or may not be safe when using
innodb_log_file_write_through=OFF; the fdatasync() or fsync() call for
ib_logfile0 might also make prior writes to data files durable.

Note: The setting debug_no_sync (in the code, my_disable_sync) would also
disable durable writes to the log file, which would be much less safe.

Thanks to Mark Callaghan for reporting this.